# fathom-mcp

./: .dockerignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  test_full_workflow.py
.github/workflows/: docker-ghcr.yml
src/fathom_mcp/api/: client.py  router.py  service.py
src/fathom_mcp/core/: auth.py  config.py
src/fathom_mcp/mcp/: server.py
src/fathom_mcp/vector/: database.py  embedder.py
src/fathom_mcp/webhooks/: handler.py
tests/: test_auth.py
